@@ -19,6 +19,8 @@ import com.google.gson.JsonObject;
 import java.io.IOException;
 import java.math.BigDecimal;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.List;
 import java.util.Optional;
@@ -26,11 +28,8 @@ import java.util.concurrent.ConcurrentSkipListSet;
 import java.util.concurrent.ExecutionException;
 import java.util.regex.Pattern;
 import net.rptools.maptool.client.MapTool;
-import net.rptools.maptool.client.ui.htmlframe.HTMLDialog;
-import net.rptools.maptool.client.ui.htmlframe.HTMLFrame;
-import net.rptools.maptool.client.ui.htmlframe.HTMLFrameFactory;
+import net.rptools.maptool.client.ui.htmlframe.*;
 import net.rptools.maptool.client.ui.htmlframe.HTMLFrameFactory.FrameType;
-import net.rptools.maptool.client.ui.htmlframe.HTMLOverlayManager;
 import net.rptools.maptool.language.I18N;
 import net.rptools.maptool.model.library.Library;
 import net.rptools.maptool.model.library.LibraryManager;
@@ -39,9 +38,6 @@ import net.rptools.parser.Parser;
 import net.rptools.parser.ParserException;
 import net.rptools.parser.VariableResolver;
 import net.rptools.parser.function.AbstractFunction;
-import org.jsoup.Jsoup;
-import org.jsoup.nodes.Element;
-import org.jsoup.parser.Tag;
 
 public class MacroDialogFunctions extends AbstractFunction {
   private static final MacroDialogFunctions instance = new MacroDialogFunctions();
@@ -59,6 +55,7 @@ public class MacroDialogFunctions extends AbstractFunction {
         "closeOverlay",
         "setOverlayVisible",
         "isOverlayVisible",
+        "isOverlayLocked",
         "getFrameProperties",
         "getDialogProperties",
         "getOverlayProperties",
@@ -78,6 +75,11 @@ public class MacroDialogFunctions extends AbstractFunction {
   public Object childEvaluate(
       Parser parser, VariableResolver resolver, String functionName, List<Object> parameters)
       throws ParserException {
+    // Macros can not interact with internal frames/dialogs/overlays
+    if (parameters.size() > 0 && HTMLFrameFactory.isInternalOnly(parameters.get(0).toString())) {
+      throw new ParserException(
+          I18N.getText("msg.error.frame.reservedName", parameters.get(0).toString()));
+    }
     if (functionName.equalsIgnoreCase("isDialogVisible")) {
       FunctionUtil.checkNumberParam(functionName, parameters, 1, 1);
       return HTMLFrameFactory.isVisible(false, parameters.get(0).toString())
@@ -123,6 +125,11 @@ public class MacroDialogFunctions extends AbstractFunction {
       String name = parameters.get(0).toString();
       return isOverlayVisible(name) ? BigDecimal.ONE : BigDecimal.ZERO;
     }
+    if (functionName.equalsIgnoreCase("isOverlayLocked")) {
+      FunctionUtil.checkNumberParam(functionName, parameters, 1, 1);
+      String name = parameters.get(0).toString();
+      return isOverlayLocked(name) ? BigDecimal.ONE : BigDecimal.ZERO;
+    }
     if (functionName.equalsIgnoreCase("resetFrame")) {
       FunctionUtil.checkNumberParam(functionName, parameters, 1, 1);
       HTMLFrame.center(parameters.get(0).toString());
@@ -166,8 +173,8 @@ public class MacroDialogFunctions extends AbstractFunction {
       String opts = parameters.size() > 2 ? parameters.get(2).toString() : "";
       URL url = null;
       try {
-        url = new URL(parameters.get(1).toString());
-      } catch (MalformedURLException e) {
+        url = new URI(parameters.get(1).toString()).toURL();
+      } catch (MalformedURLException | URISyntaxException e) {
         throw new ParserException(e);
       }
 
@@ -186,7 +193,6 @@ public class MacroDialogFunctions extends AbstractFunction {
 
   private String showURL(String name, URL url, String opts, FrameType frameType, boolean isHTML5)
       throws ParserException {
-    String htmlString = "";
     try {
       Optional<Library> library = new LibraryManager().getLibrary(url).get();
       if (library.isEmpty()) {
@@ -194,27 +200,16 @@ public class MacroDialogFunctions extends AbstractFunction {
             I18N.getText("macro.function.html5.invalidURI", url.toExternalForm()));
       }
 
-      htmlString = library.get().readAsString(url).get();
-
-      var document = Jsoup.parse(htmlString);
-      var head = document.select("head").first();
-      if (head != null) {
-        String baseURL = url.toExternalForm().replaceFirst("\\?.*", "");
-        baseURL = baseURL.substring(0, baseURL.lastIndexOf("/") + 1);
-        var baseElement = new Element(Tag.valueOf("base"), "").attr("href", baseURL);
-        if (head.children().isEmpty()) {
-          head.appendChild(baseElement);
-        } else {
-          head.child(0).before(baseElement);
-        }
-
-        htmlString = document.html();
+      if (!library.get().locationExists(url).get()) {
+        throw new ParserException(
+            I18N.getText("macro.function.html5.invalidURI", url.toExternalForm()));
       }
-
     } catch (InterruptedException | ExecutionException | IOException e) {
-      throw new ParserException(e);
+      throw new ParserException(
+          I18N.getText("macro.function.html5.invalidURI", url.toExternalForm()));
     }
-    HTMLFrameFactory.show(name, frameType, true, opts, htmlString);
+    HTMLContent htmlContent = HTMLContent.fromURL(url);
+    HTMLFrameFactory.show(name, frameType, true, opts, htmlContent);
     return "";
   }
 
@@ -284,6 +279,14 @@ public class MacroDialogFunctions extends AbstractFunction {
     return false;
   }
 
+  private boolean isOverlayLocked(String name) {
+    HTMLOverlayManager overlay = MapTool.getFrame().getOverlayPanel().getOverlay(name);
+    if (overlay != null) {
+      return overlay.getLocked();
+    }
+    return false;
+  }
+
   /**
    * Verify the function and thisarg identifier, then run the script.
    *
@@ -311,8 +314,23 @@ public class MacroDialogFunctions extends AbstractFunction {
       throw new ParserException(I18N.getText("msg.error.dialog.js.id", fName, thisArg));
     }
 
-    // Create the script
-    String script = func + ".apply(" + thisArg + "," + argsArray.toString() + ");";
+    // Wrap the script in a function to check if the document is complenet/wait for the document to
+    // be complete before trying to run it
+    String script =
+        """
+        (function() {
+          function waitForComplete() {
+            if (document.readyState === "complete") {
+              %s.apply(%s, %s);
+            } else {
+              setTimeout(waitForComplete, 50);
+            }
+          };
+
+          waitForComplete();
+        })();
+        """
+            .formatted(func, thisArg, argsArray.toString());
 
     // Execute the script
     boolean executed;
