@@ -12,16 +12,17 @@
  * <http://www.gnu.org/licenses/> and specifically the Affero license
  * text at <http://www.gnu.org/licenses/agpl.html>.
  */
-package net.rptools.maptool.client.ui.token.edit;
+package net.rptools.maptool.client.ui.token.dialog.edit;
 
+import com.google.common.collect.Iterables;
 import com.jidesoft.combobox.MultilineStringExComboBox;
 import com.jidesoft.combobox.PopupPanel;
-import com.jidesoft.grid.AbstractPropertyTableModel;
 import com.jidesoft.grid.MultilineStringCellEditor;
 import com.jidesoft.grid.NavigableModel;
 import com.jidesoft.grid.Property;
 import com.jidesoft.grid.PropertyPane;
 import com.jidesoft.grid.PropertyTable;
+import com.jidesoft.grid.PropertyTableModel;
 import com.jidesoft.plaf.basic.BasicExComboBoxUI;
 import com.jidesoft.swing.CheckBoxListWithSelectable;
 import com.jidesoft.swing.DefaultSelectable;
@@ -43,6 +44,7 @@ import java.io.IOException;
 import java.math.BigDecimal;
 import java.util.*;
 import java.util.stream.Collectors;
+import javax.annotation.Nullable;
 import javax.swing.*;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
@@ -50,7 +52,6 @@ import javax.swing.event.DocumentEvent;
 import javax.swing.event.DocumentListener;
 import javax.swing.table.AbstractTableModel;
 import javax.swing.table.TableCellRenderer;
-import javax.swing.text.JTextComponent;
 import javax.swing.text.Position.Bias;
 import javax.swing.text.html.HTMLDocument;
 import javax.swing.text.html.HTMLEditorKit;
@@ -62,11 +63,10 @@ import net.rptools.maptool.client.AppPreferences;
 import net.rptools.maptool.client.MapTool;
 import net.rptools.maptool.client.MapToolUtil;
 import net.rptools.maptool.client.functions.TokenBarFunction;
-import net.rptools.maptool.client.swing.AbeillePanel;
-import net.rptools.maptool.client.swing.ColorWell;
-import net.rptools.maptool.client.swing.GenericDialog;
+import net.rptools.maptool.client.swing.*;
 import net.rptools.maptool.client.swing.htmleditorsplit.HtmlEditorSplit;
 import net.rptools.maptool.client.ui.ImageAssetPanel;
+import net.rptools.maptool.client.ui.sheet.stats.StatSheetComboBoxRenderer;
 import net.rptools.maptool.client.ui.theme.Icons;
 import net.rptools.maptool.client.ui.theme.RessourceManager;
 import net.rptools.maptool.client.ui.token.BarTokenOverlay;
@@ -77,12 +77,17 @@ import net.rptools.maptool.language.I18N;
 import net.rptools.maptool.model.*;
 import net.rptools.maptool.model.Token.TerrainModifierOperation;
 import net.rptools.maptool.model.Token.Type;
-import net.rptools.maptool.model.Zone.Layer;
 import net.rptools.maptool.model.library.LibraryManager;
 import net.rptools.maptool.model.player.Player;
+import net.rptools.maptool.model.sheet.stats.StatSheet;
+import net.rptools.maptool.model.sheet.stats.StatSheetLocation;
+import net.rptools.maptool.model.sheet.stats.StatSheetManager;
+import net.rptools.maptool.model.sheet.stats.StatSheetProperties;
+import net.rptools.maptool.util.AuraSyntax;
 import net.rptools.maptool.util.ExtractHeroLab;
 import net.rptools.maptool.util.FunctionUtil;
 import net.rptools.maptool.util.ImageManager;
+import net.rptools.maptool.util.LightSyntax;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.fife.ui.rsyntaxtextarea.RSyntaxTextArea;
@@ -92,7 +97,7 @@ import org.fife.ui.rtextarea.RTextScrollPane;
 import org.fife.ui.rtextarea.SearchContext;
 import org.fife.ui.rtextarea.SearchEngine;
 
-/** This dialog is used to display all of the token states and notes to the user. */
+/** This dialog is used to display all the token states and notes to the user. */
 public class EditTokenDialog extends AbeillePanel<Token> {
 
   /** The size used to constrain the icon. */
@@ -104,76 +109,170 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       RessourceManager.getBigIcon(Icons.EDIT_TOKEN_REFRESH_ON);
   private static final ImageIcon REFRESH_ICON_OFF =
       RessourceManager.getBigIcon(Icons.EDIT_TOKEN_REFRESH_OFF);
-  // private CharSheetController controller;
+
+  private final TokenPropertiesDialog view;
   private final RSyntaxTextArea xmlStatblockRSyntaxTextArea = new RSyntaxTextArea(2, 2);
   private final RSyntaxTextArea textStatblockRSyntaxTextArea = new RSyntaxTextArea(2, 2);
   private final WordWrapCellRenderer propertyCellRenderer = new WordWrapCellRenderer();
 
   private boolean tokenSaved;
-  private GenericDialog dialog;
+  private final GenericDialogFactory dialogFactory =
+      GenericDialog.getFactory().createOkCancelButtons().setDefaultButton(ButtonKind.OK);
   private ImageAssetPanel imagePanel;
   private final LibraryManager libraryManager = new LibraryManager();
 
-  // private final Toolbox toolbox = new Toolbox();
   private HeroLabData heroLabData;
   private AutoGenerateTopologySwingWorker autoGenerateTopologySwingWorker =
       new AutoGenerateTopologySwingWorker(false, Color.BLACK);
 
-  /** Create a new token notes dialog. */
-  public EditTokenDialog() {
-    super(new TokenPropertiesDialog().$$$getRootComponent$$$());
+  private EditTokenDialog(TokenPropertiesDialog view) {
+    super(view.getRootComponent());
+    this.view = view;
     panelInit();
   }
 
+  /** Create a new token notes dialog. */
+  public EditTokenDialog() {
+    this(new TokenPropertiesDialog());
+  }
+
+  @SuppressWarnings("unused")
+  public void initPropertyTable() {
+    getPropertyTable().setModel(new TokenPropertyTableModel());
+  }
+
+  @SuppressWarnings("unused")
   public void initGMNotesEditorPane() {
     setGmNotesEnabled(MapTool.getPlayer().isGM());
   }
 
+  @SuppressWarnings("unused")
+  public void initStatSheetComboBoxes() {
+    var sheetCombo = getStatSheetCombo();
+    sheetCombo.setRenderer(new StatSheetComboBoxRenderer());
+    var locationCombo = getStatSheetLocationCombo();
+    Arrays.stream(StatSheetLocation.values()).forEach(locationCombo::addItem);
+    sheetCombo.addActionListener(
+        l -> {
+          var sheet = (StatSheet) sheetCombo.getSelectedItem();
+          var ssManager = new StatSheetManager();
+          boolean usingDefault =
+              sheet != null && (sheet.name() == null && sheet.namespace() == null);
+          if (sheet == null || ssManager.isLegacyStatSheet(sheet) || usingDefault) {
+            locationCombo.setEnabled(false);
+            locationCombo.setSelectedItem(null);
+          } else {
+            locationCombo.setEnabled(true);
+            var tokenSheet = getModel().getStatSheet();
+            if (tokenSheet != null) {
+              locationCombo.setSelectedItem(tokenSheet.location());
+            } else {
+              var sheetProp =
+                  MapTool.getCampaign().getTokenTypeDefaultSheetId(getModel().getPropertyType());
+              locationCombo.setSelectedItem(sheetProp.location());
+            }
+          }
+        });
+  }
+
+  @SuppressWarnings("unused")
+  public void initStatesAndBarsPanel() {
+    var test = (JScrollPane) getComponent("statesAndBarsScrollPane");
+    // This number is a bit arbitrary, but importantly it is much bigger than the default of 1 pixel
+    // but still likely to be smaller than a single bar's height.
+    test.getVerticalScrollBar().setUnitIncrement(20);
+  }
+
+  @SuppressWarnings("unused")
   public void initTerrainModifierOperationComboBox() {
     getTerrainModifierOperationComboBox()
         .setModel(new DefaultComboBoxModel<>(TerrainModifierOperation.values()));
   }
 
+  @SuppressWarnings("unused")
   public void initTerrainModifiersIgnoredList() {
     DefaultListModel<TerrainModifierOperation> operationModel = new DefaultListModel<>();
     getTerrainModifiersIgnoredList().setModel(operationModel);
     EnumSet.allOf(TerrainModifierOperation.class).forEach(operationModel::addElement);
   }
 
+  @SuppressWarnings("unused")
+  public void initUniqueLightSourcesTextPane() {
+    setUniqueLightSourcesEnabled(MapTool.getPlayer().isGM());
+  }
+
+  @SuppressWarnings("unused")
+  public void initUniqueAurasTextPane() {
+    setUniqueAurasEnabled(MapTool.getPlayer().isGM());
+  }
+
+  @SuppressWarnings("unused")
   public void initJtsMethodComboBox() {
     getJtsMethodComboBox().setModel(new DefaultComboBoxModel<>(JTS_SimplifyMethodType.values()));
   }
 
   public void showDialog(Token token) {
-    dialog =
-        new GenericDialog(I18N.getString("EditTokenDialog.msg.title"), MapTool.getFrame(), this) {
-          private static final long serialVersionUID = 5439449816096482201L;
+    dialogFactory
+        .setDialogTitle(I18N.getString("EditTokenDialog.msg.title"))
+        .setContent(this)
+        .makeModal(true)
+        .setCloseOperation(WindowConstants.DISPOSE_ON_CLOSE)
+        .onBeforeClose(
+            e -> {
+              if (!autoGenerateTopologySwingWorker.isDone()) {
+                log.info("Stopping autoGenerateTopologySwingWorker...");
+                autoGenerateTopologySwingWorker.cancel(true);
+              }
+              unbind();
+            });
+    getTokenLayoutPanel().reset(token);
+    getFlippedX()
+        .addChangeListener(
+            e ->
+                getTokenLayoutPanel()
+                    .getHelper()
+                    .setTokenFlipX(((JCheckBox) e.getSource()).isSelected()));
+    getFlippedY()
+        .addChangeListener(
+            e ->
+                getTokenLayoutPanel()
+                    .getHelper()
+                    .setTokenFlipY(((JCheckBox) e.getSource()).isSelected()));
+    getFlippedIso()
+        .addChangeListener(
+            e ->
+                getTokenLayoutPanel()
+                    .getHelper()
+                    .setTokenFlipIso(((JCheckBox) e.getSource()).isSelected()));
 
-          @Override
-          public void closeDialog() {
-            // TODO: I don't like this. There should really be a AbeilleDialog class that does this
-
-            if (!autoGenerateTopologySwingWorker.isDone()) {
-              log.info("Stopping autoGenerateTopologySwingWorker...");
-              autoGenerateTopologySwingWorker.cancel(true);
-            }
-
-            unbind();
-            super.closeDialog();
-          }
-        };
     getTokenTopologyPanel().reset(token);
     bind(token);
 
-    getRootPane().setDefaultButton(getOKButton());
+    getRootPane().setDefaultButton((JButton) dialogFactory.getDialog().getOKButton());
     setGmNotesEnabled(MapTool.getPlayer().isGM());
     getComponent("@GMName").setEnabled(MapTool.getPlayer().isGM());
 
-    dialog.setDefaultCloseOperation(WindowConstants.DISPOSE_ON_CLOSE);
+    setUniqueLightSourcesEnabled(MapTool.getPlayer().isGM());
+    setUniqueAurasEnabled(MapTool.getPlayer().isGM());
 
     setLibTokenPaneEnabled(token.isLibToken());
-    validateLibTokenURIAccess(getNameField().getName());
-    dialog.showDialog();
+    validateLibTokenURIAccess(getNameField().getText());
+    var combo = getStatSheetCombo();
+    combo.removeAllItems();
+    /* Default Entry */
+    var defaultSS =
+        new StatSheet(null, I18N.getText("token.statSheet.useDefault"), null, Set.of(), null);
+    combo.addItem(defaultSS);
+    var ssManager = new StatSheetManager();
+    ssManager.getStatSheets(token.getPropertyType()).stream()
+        .sorted(Comparator.comparing(StatSheet::description))
+        .forEach(ss -> combo.addItem(ss));
+    if (token.usingDefaultStatSheet()) {
+      combo.setSelectedItem(defaultSS);
+    } else {
+      combo.setSelectedItem(new StatSheetManager().getStatSheet(token.getStatSheet().id()));
+    }
+    dialogFactory.display();
   }
 
   private void validateLibTokenURIAccess(String name) {
@@ -181,56 +280,49 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       getLibTokenURIErrorLabel()
           .setText(I18N.getText("EditTokenDialog.libTokenURI.error.notLibToken", name));
       getAllowURLAccess().setEnabled(false);
-      return;
+    } else if (libraryManager.usesReservedPrefix(name.substring(4))) {
+      getLibTokenURIErrorLabel()
+          .setText(
+              I18N.getText(
+                  "macro.setAllowsURIAccess.reservedPrefix",
+                  libraryManager.getReservedPrefix(name.substring(4))));
+      getAllowURLAccess().setEnabled(false);
+    } else if (libraryManager.usesReservedName(name.substring(4))) {
+      getLibTokenURIErrorLabel()
+          .setText(I18N.getText("EditTokenDialog.libTokenURI.error.reserved", name));
+
+      getAllowURLAccess().setEnabled(false);
     } else {
-      if (libraryManager.usesReservedPrefix(name.substring(4))) {
-        getLibTokenURIErrorLabel()
-            .setText(
-                I18N.getText(
-                    "macro.setAllowsURIAccess.reservedPrefix",
-                    libraryManager.getReservedPrefix(name.substring(4))));
-        getAllowURLAccess().setEnabled(false);
-        return;
-      } else if (libraryManager.usesReservedName(name.substring(4))) {
-        getLibTokenURIErrorLabel()
-            .setText(I18N.getText("EditTokenDialog.libTokenURI.error.reserved", name));
-
-        getAllowURLAccess().setEnabled(false);
-        return;
-      }
+      getAllowURLAccess().setEnabled(true);
+      getLibTokenURIErrorLabel().setText(" ");
     }
-
-    getAllowURLAccess().setEnabled(true);
-    getLibTokenURIErrorLabel().setText(" ");
   }
 
   @Override
   public void bind(final Token token) {
-    // ICON
+    /* ICON */
     getTokenIconPanel().setImageId(token.getImageAssetId());
-
-    // NOTES
+    /* NOTES, GM NOTES. Due to the way things happen on different gui threads, the type must be set
+    before the text
+    otherwise the wrong values can get populated when the tab change listener fires. */
+    getGMNotesEditor().setTextType(token.getGmNotesType());
     getGMNotesEditor().setText(token.getGMNotes());
+    getPlayerNotesEditor().setTextType(token.getNotesType());
     getPlayerNotesEditor().setText(token.getNotes());
 
-    // TYPE
+    /* TYPE */
     getTypeCombo().setSelectedItem(token.getType());
 
-    // SIGHT
+    /* SIGHT */
     updateSightTypeCombo();
 
-    // Image Tables
+    /* Image Tables */
     updateImageTableCombo();
 
-    // STATES
-    Component barPanel = null;
+    /* STATES */
     updateStatesPanel();
     Component[] statePanels = getStatesPanel().getComponents();
     for (Component statePanel : statePanels) {
-      if ("bar".equals(statePanel.getName())) {
-        barPanel = statePanel;
-        continue;
-      }
       Component[] states = ((Container) statePanel).getComponents();
       for (Component component : states) {
         JCheckBox state = (JCheckBox) component;
@@ -238,60 +330,55 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       }
     }
 
-    // BARS
-    if (barPanel != null) {
-      Component[] barComponents = ((Container) barPanel).getComponents();
-      JCheckBox cb = null;
-      JSlider bar = null;
-      for (var tokenBarPanel : barComponents) {
-        for (var component : ((Container) tokenBarPanel).getComponents()) {
-          if (component instanceof JCheckBox) {
-            cb = (JCheckBox) component;
-          } else if (component instanceof JSlider) {
-            bar = (JSlider) component;
-          }
+    /* BARS */
+    var barsPanel = getBarsPanel();
+    Component[] barComponents = ((Container) barsPanel).getComponents();
+    JCheckBox cb = null;
+    JSlider bar = null;
+    for (var tokenBarPanel : barComponents) {
+      for (var component : ((Container) tokenBarPanel).getComponents()) {
+        if (component instanceof JCheckBox) {
+          cb = (JCheckBox) component;
+        } else if (component instanceof JSlider) {
+          bar = (JSlider) component;
         }
-        if (token.getState(bar.getName()) == null) {
-          cb.setSelected(true);
-          bar.setEnabled(false);
-          bar.setValue(100);
-        } else {
-          cb.setSelected(false);
-          bar.setEnabled(true);
-          bar.setValue(
-              (int)
-                  (TokenBarFunction.getBigDecimalValue(token.getState(bar.getName())).doubleValue()
-                      * 100));
-        }
+      }
+      if (token.getState(bar.getName()) == null) {
+        cb.setSelected(true);
+        bar.setEnabled(false);
+        bar.setValue(100);
+      } else {
+        cb.setSelected(false);
+        bar.setEnabled(true);
+        bar.setValue(
+            (int)
+                (TokenBarFunction.getBigDecimalValue(token.getState(bar.getName())).doubleValue()
+                    * 100));
       }
     }
 
-    // OWNER LIST
-    EventQueue.invokeLater(() -> getOwnerList().setModel(new OwnerListModel()));
+    /* OWNER LIST */
+    EventQueue.invokeLater(() -> getOwnerList().setModel(new OwnerListModel(token)));
 
-    // SPEECH TABLE
+    /* SPEECH TABLE */
     EventQueue.invokeLater(() -> getSpeechTable().setModel(new SpeechTableModel(token)));
 
-    // Player player = MapTool.getPlayer();
-    // boolean editable = player.isGM() ||
-    // !MapTool.getServerPolicy().useStrictTokenManagement() ||
-    // token.isOwner(player.getName());
-    // getAllPlayersCheckBox().setSelected(token.isOwnedByAll());
-
-    // OTHER
+    /* OTHER */
     getShapeCombo().setSelectedItem(token.getShape());
     setSizeCombo(token);
+    getSnapToGrid().setSelected(token.isSnapToGrid());
+    getFlippedIso().setSelected(token.getIsFlippedIso());
+    getFlippedX().setSelected(token.isFlippedX());
+    getFlippedY().setSelected(token.isFlippedY());
 
-    // Updates the Property Type list.
+    /* Updates the Property Type list. */
     updatePropertyTypeCombo();
 
-    // Set the selected item in Property Type list. Triggers a itemStateChanged event if index != 0
-    getPropertyTypeCombo().setSelectedItem(token.getPropertyType());
-
-    // If index == 0, the itemStateChanged event wasn't triggered, so we update. Fix #1504
-    if (getPropertyTypeCombo().getSelectedIndex() == 0) {
-      updatePropertiesTable((String) getPropertyTypeCombo().getSelectedItem());
-    }
+    /* Set the selected item in Property Type list. */
+    var propertyType = token.getPropertyType();
+    getPropertyTypeCombo().setSelectedItem(propertyType);
+    /* Make sure the right properties are displayed. */
+    updatePropertiesTable(token, propertyType);
 
     getSightTypeCombo()
         .setSelectedItem(
@@ -307,7 +394,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     getTerrainModifier().setText(Double.toString(token.getTerrainModifier()));
     getTerrainModifierOperationComboBox().setSelectedItem(token.getTerrainModifierOperation());
 
-    // Get tokens ignored list, match to the index in the JList then select them.
+    /* Get tokens ignored list, match to the index in the JList then select them. */
     getTerrainModifiersIgnoredList()
         .setSelectedIndices(
             token.getTerrainModifiersIgnored().stream()
@@ -320,7 +407,22 @@ public class EditTokenDialog extends AbeillePanel<Token> {
                 .mapToInt(Integer::valueOf)
                 .toArray());
 
-    // Jamz: Init the Topology tab...
+    var uniqueLightsSources = token.getUniqueLightSources();
+    var uniqueLights = new Lights();
+    var uniqueAuras = new Lights();
+    for (var lightSource : uniqueLightsSources) {
+      var lights =
+          switch (lightSource.getType()) {
+            case NORMAL -> uniqueLights;
+            case AURA -> uniqueAuras;
+          };
+      lights.add(lightSource);
+    }
+
+    getUniqueLightSourcesTextPane().setText(new LightSyntax().stringifyLights(uniqueLights));
+    getUniqueAurasTextPane().setText(new AuraSyntax().stringifyAuras(uniqueAuras));
+
+    /* Jamz: Init the Topology tab... */
     JTabbedPane tabbedPane = getTabbedPane();
 
     String topologyTitle = I18N.getText("EditTokenDialog.tab.vbl");
@@ -334,7 +436,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       getVisibilityToleranceSpinner().setValue(token.getAlwaysVisibleTolerance());
       getJtsMethodComboBox().setSelectedItem(getTokenTopologyPanel().getJtsMethod());
 
-      // Reset scale
+      /* Reset scale */
       getTokenTopologyPanel().setScale(1d);
     } else {
       tabbedPane.setEnabledAt(tabbedPane.indexOfTab(topologyTitle), false);
@@ -360,6 +462,12 @@ public class EditTokenDialog extends AbeillePanel<Token> {
         .setSelectedIcon(RessourceManager.getBigIcon(Icons.TOOLBAR_TOPOLOGY_TYPE_PIT_ON));
     getPitVblToggle().setIcon(RessourceManager.getBigIcon(Icons.TOOLBAR_TOPOLOGY_TYPE_PIT_ON));
 
+    getCoverVblToggle()
+        .setSelected(getTokenTopologyPanel().isTopologyTypeSelected(Zone.TopologyType.COVER_VBL));
+    getCoverVblToggle()
+        .setSelectedIcon(RessourceManager.getBigIcon(Icons.TOOLBAR_TOPOLOGY_TYPE_COVER_ON));
+    getCoverVblToggle().setIcon(RessourceManager.getBigIcon(Icons.TOOLBAR_TOPOLOGY_TYPE_COVER_ON));
+
     getMblToggle()
         .setSelected(getTokenTopologyPanel().isTopologyTypeSelected(Zone.TopologyType.MBL));
     getMblToggle().setSelectedIcon(RessourceManager.getBigIcon(Icons.TOOLBAR_TOPOLOGY_TYPE_MBL_ON));
@@ -371,11 +479,13 @@ public class EditTokenDialog extends AbeillePanel<Token> {
 
     getAllowURLAccess().setSelected(token.getAllowURIAccess());
 
-    // Jamz: Init the Hero Lab tab...
+    /* Jamz: Init the Hero Lab tab... */
     heroLabData = token.getHeroLabData();
     String heroLabTitle = I18N.getString("EditTokenDialog.tab.hero");
 
     if (heroLabData != null) {
+      getHeroLabImagesList().setCellRenderer(new HeroLabImageListRenderer(heroLabData));
+
       boolean isDirty = heroLabData.isDirty() && heroLabData.getPortfolioFile().exists();
       JButton refreshDataButton = (JButton) getComponent("refreshDataButton");
 
@@ -396,6 +506,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       getHtmlStatblockEditor().setText(heroLabData.getStatBlock_html());
       getHtmlStatblockEditor().setCaretPosition(0);
 
+      xmlStatblockRSyntaxTextArea.setUseFocusableTips(false);
       xmlStatblockRSyntaxTextArea.setText(heroLabData.getStatBlock_xml());
       xmlStatblockRSyntaxTextArea.setCaretPosition(0);
 
@@ -418,17 +529,17 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       ((JLabel) getComponent("lastModified")).setText(heroLabData.getLastModifiedDateString());
 
       EventQueue.invokeLater(this::loadHeroLabImageList);
-
-      // loadHeroLabImageList();
     } else {
+      getHeroLabImagesList().setCellRenderer(new DefaultListCellRenderer());
+
       tabbedPane.setEnabledAt(tabbedPane.indexOfTab(heroLabTitle), false);
       if (tabbedPane.getSelectedIndex() == tabbedPane.indexOfTab(heroLabTitle)) {
         tabbedPane.setSelectedIndex(6);
       }
     }
 
-    // we will disable the Owner only visible check box if the token is not
-    // visible to players to signify the relationship
+    /* we will disable the Owner only visible check box if the token is not
+    visible to players to signify the relationship */
     ActionListener tokenVisibleActionListener =
         actionEvent -> {
           AbstractButton abstractButton = (AbstractButton) actionEvent.getSource();
@@ -438,37 +549,22 @@ public class EditTokenDialog extends AbeillePanel<Token> {
         };
     getVisibleCheckBox().addActionListener(tokenVisibleActionListener);
 
-    // Character Sheets
-    // controller = null;
-    // String form =
-    // MapTool.getCampaign().getCharacterSheets().get(token.getPropertyType());
-    // if (form == null)
-    // return;
-    // URL formUrl = getClass().getClassLoader().getResource(form);
-    // if (formUrl == null)
-    // return;
-    // controller = new CharSheetController(formUrl, null);
-    // HashMap<String, Object> properties = new HashMap<String, Object>();
-    // for (String prop : token.getPropertyNames())
-    // properties.put(prop, token.getProperty(prop));
-    // controller.setData(properties);
-    // controller.getPanel().setName("characterSheet");
-    // replaceComponent("sheetPanel", "characterSheet", controller.getPanel());
-
     super.bind(token);
   }
 
   private void setGmNotesEnabled(boolean enabled) {
-    JTabbedPane tabbedPane = getTabbedPane();
-    String libTokenTile = I18N.getString("EditTokenDialog.label.gmnotes");
-    tabbedPane.setEnabledAt(tabbedPane.indexOfTab(libTokenTile), enabled);
+    JTabbedPane tabbedPane = view.getNotesTabbedPane();
+    var index = tabbedPane.indexOfComponent(view.getGmNotesPanel());
+    tabbedPane.setEnabledAt(index, enabled);
+    if (!enabled) {
+      tabbedPane.setSelectedIndex(tabbedPane.indexOfComponent(view.getPlayerNotesPanel()));
+    }
+
     getGMNotesEditor().setEnabled(enabled);
   }
 
   private void setLibTokenPaneEnabled(boolean show) {
-    JTabbedPane tabbedPane = getTabbedPane();
-    String libTokenTile = I18N.getString("EditTokenDialog.tab.libToken");
-    tabbedPane.setEnabledAt(tabbedPane.indexOfTab(libTokenTile), show);
+    getLibTokenProperties().setEnabled(show);
     getAllowURLAccess().setEnabled(show);
   }
 
@@ -480,10 +576,12 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     return (HtmlEditorSplit) getComponent("playerNotesEditor");
   }
 
+  @SuppressWarnings("unused")
   public void initTypeCombo() {
-    getTypeCombo().setModel(new DefaultComboBoxModel<>(Token.Type.values()));
+    getTypeCombo().setModel(new DefaultComboBoxModel<>(Type.values()));
   }
 
+  @SuppressWarnings("unused")
   public void initLibTokenTable() {
     getNameField()
         .getDocument()
@@ -516,6 +614,14 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     return (JComboBox) getComponent("type");
   }
 
+  public JComboBox getStatSheetCombo() {
+    return (JComboBox) getComponent("statSheetComboBox");
+  }
+
+  public JComboBox getStatSheetLocationCombo() {
+    return (JComboBox) getComponent("statSheetLocationComboBox");
+  }
+
   public void initTokenIconPanel() {
     getTokenIconPanel().setPreferredSize(new Dimension(100, 100));
     getTokenIconPanel().setMinimumSize(new Dimension(100, 100));
@@ -524,8 +630,9 @@ public class EditTokenDialog extends AbeillePanel<Token> {
   public ImageAssetPanel getTokenIconPanel() {
     if (imagePanel == null) {
       imagePanel = new ImageAssetPanel();
+
       imagePanel.setAllowEmptyImage(false);
-      replaceComponent("mainPanel", "tokenImage", imagePanel);
+      replaceComponent("imagePanel", "tokenImage", imagePanel);
     }
     return imagePanel;
   }
@@ -544,7 +651,8 @@ public class EditTokenDialog extends AbeillePanel<Token> {
         .addItemListener(
             e -> {
               if (e.getStateChange() == ItemEvent.SELECTED) {
-                updatePropertiesTable((String) getPropertyTypeCombo().getSelectedItem());
+                updatePropertiesTable(
+                    getModel(), (String) getPropertyTypeCombo().getSelectedItem());
               }
             });
   }
@@ -558,8 +666,10 @@ public class EditTokenDialog extends AbeillePanel<Token> {
   }
 
   private void updateSightTypeCombo() {
-    List<String> typeList = new ArrayList<String>(MapTool.getCampaign().getSightTypes());
-    Collections.sort(typeList);
+    List<String> typeList = new ArrayList<String>();
+    for (var sightType : MapTool.getCampaign().getSightTypes()) {
+      typeList.add(sightType.getName());
+    }
 
     DefaultComboBoxModel model = new DefaultComboBoxModel(typeList.toArray());
     getSightTypeCombo().setModel(model);
@@ -578,11 +688,13 @@ public class EditTokenDialog extends AbeillePanel<Token> {
    *
    * @param propertyType the property type of the token (unused).
    */
-  private void updatePropertiesTable(final String propertyType) {
+  private void updatePropertiesTable(@Nullable Token token, final String propertyType) {
     EventQueue.invokeLater(
         () -> {
           PropertyTable pp = getPropertyTable();
-          pp.setModel(new TokenPropertyTableModel());
+          var propertyList = MapTool.getCampaign().getTokenPropertyList(propertyType);
+          pp.setModel(
+              new TokenPropertyTableModel(token, propertyType, propertyList, propertyCellRenderer));
           pp.expandAll();
         });
   }
@@ -596,7 +708,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     Grid grid = MapTool.getFrame().getCurrentZoneRenderer().getZone().getGrid();
     DefaultComboBoxModel model = new DefaultComboBoxModel(grid.getFootprints().toArray());
     model.insertElementAt(
-        token.getLayer() == Layer.TOKEN
+        !token.getLayer().isStampLayer()
             ? I18N.getString("token.popup.menu.size.native")
             : I18N.getString("token.popup.menu.size.free"),
         0);
@@ -621,7 +733,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
   }
 
   public void initTokenOpacitySlider() {
-    getTokenOpacitySlider().addChangeListener(new SliderListener());
+    getTokenOpacitySlider().addChangeListener(new OpacitySliderListener());
   }
 
   public JSlider getTokenOpacitySlider() {
@@ -644,26 +756,41 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     return (JList<TerrainModifierOperation>) getComponent("terrainModifiersIgnored");
   }
 
-  public JLabel getLibTokenURIErrorLabel() {
-    return (JLabel) getComponent("Label.LibURIError");
+  public void setUniqueLightSourcesEnabled(boolean enabled) {
+    getUniqueLightSourcesTextPane().setEnabled(enabled);
+    getUniqueLightSourcesPanel().setEnabled(enabled);
   }
 
-  public void initOKButton() {
-    getOKButton()
-        .addActionListener(
-            e -> {
-              if (commit()) {
-                unbind();
-                dialog.closeDialog();
-              }
-            });
+  public JPanel getUniqueLightSourcesPanel() {
+    return (JPanel) getComponent("uniqueLightSourcesPanel");
+  }
+
+  public JTextPane getUniqueLightSourcesTextPane() {
+    return (JTextPane) getComponent("uniqueLightSources");
+  }
+
+  public void setUniqueAurasEnabled(boolean enabled) {
+    getUniqueAurasTextPane().setEnabled(enabled);
+    getUniqueAurasPanel().setEnabled(enabled);
+  }
+
+  public JTextPane getUniqueAurasTextPane() {
+    return (JTextPane) getComponent("uniqueAuras");
+  }
+
+  public JPanel getUniqueAurasPanel() {
+    return (JPanel) getComponent("uniqueAurasPanel");
+  }
+
+  public JLabel getLibTokenURIErrorLabel() {
+    return (JLabel) getComponent("Label.LibURIError");
   }
 
   @Override
   public boolean commit() {
     Token token = getModel();
 
-    if (getNameField().getText().equals("")) {
+    if (getNameField().getText().isEmpty()) {
       MapTool.showError("msg.error.emptyTokenName");
       return false;
     }
@@ -673,28 +800,30 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     if (getPropertyTable().isEditing()) {
       getPropertyTable().getCellEditor().stopCellEditing();
     }
-    // Commit the changes to the token properties
-    // If no map available, cancel the commit. Fixes #1646.
+    /* Commit the changes to the token properties */
+    /* If no map available, cancel the commit. Fixes #1646. */
     if (!super.commit() || MapTool.getFrame().getCurrentZoneRenderer() == null) {
       return false;
     }
-    // TYPE
-    // Only update this if it actually changed
+    /* TYPE */
+    /* Only update this if it actually changed */
     if (getTypeCombo().getSelectedItem() != token.getType()) {
-      token.setType((Token.Type) getTypeCombo().getSelectedItem());
+      token.setType((Type) getTypeCombo().getSelectedItem());
     }
 
-    // NOTES
+    /* NOTES */
     token.setGMNotes(getGMNotesEditor().getText());
+    token.setGmNotesType(getGMNotesEditor().getTextType());
     token.setNotes(getPlayerNotesEditor().getText());
+    token.setNotesType(getPlayerNotesEditor().getTextType());
 
-    // SIZE
+    /* SIZE */
     token.setSnapToScale(getSizeCombo().getSelectedIndex() != 0);
     if (getSizeCombo().getSelectedIndex() > 0) {
       Grid grid = MapTool.getFrame().getCurrentZoneRenderer().getZone().getGrid();
       token.setFootprint(grid, (TokenFootprint) getSizeCombo().getSelectedItem());
     }
-    // Other
+    /* Other */
     token.setPropertyType((String) getPropertyTypeCombo().getSelectedItem());
     token.setSightType((String) getSightTypeCombo().getSelectedItem());
     token.setImageTableName((String) getImageTableCombo().getSelectedItem());
@@ -706,7 +835,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     try {
       token.setTerrainModifier(Double.parseDouble(getTerrainModifier().getText()));
     } catch (NumberFormatException e) {
-      // User didn't enter a valid float...
+      /* User didn't enter a valid float... */
       token.setTerrainModifier(1);
     }
 
@@ -716,42 +845,46 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     token.setTerrainModifiersIgnored(
         new HashSet<>(getTerrainModifiersIgnoredList().getSelectedValuesList()));
 
-    // Get the states
+    var existingUniqueLightSources = token.getUniqueLightSources();
+    var uniqueLights =
+        new LightSyntax()
+            .parseLights(getUniqueLightSourcesTextPane().getText(), existingUniqueLightSources);
+    var uniqueAuras =
+        new AuraSyntax().parseAuras(getUniqueAurasTextPane().getText(), existingUniqueLightSources);
+    token.removeAllUniqueLightsources();
+    for (var lightSource : Iterables.concat(uniqueLights, uniqueAuras)) {
+      token.addUniqueLightSource(lightSource);
+    }
+
+    /* Get the states */
     Component[] stateComponents = getStatesPanel().getComponents();
-    Container barPanel = null;
     for (Component stateComponent : stateComponents) {
-      if ("bar".equals(stateComponent.getName())) {
-        barPanel = (Container) stateComponent;
-        continue;
-      }
       Component[] components = ((Container) stateComponent).getComponents();
       for (Component component : components) {
         JCheckBox cb = (JCheckBox) component;
         String state = cb.getText();
         token.setState(state, cb.isSelected() ? Boolean.TRUE : Boolean.FALSE);
       }
-    } // endfor
-
-    // BARS
-    if (barPanel != null) {
-      for (var barContainer : barPanel.getComponents()) {
-        var barComponents = ((Container) barContainer).getComponents();
-
-        JSlider bar = (JSlider) barComponents[1];
-        JCheckBox cb = (JCheckBox) barComponents[2];
-
-        BigDecimal value =
-            cb.isSelected() ? null : new BigDecimal(bar.getValue()).divide(new BigDecimal(100));
-        token.setState(bar.getName(), value);
-        bar.setValue(
-            (int)
-                (TokenBarFunction.getBigDecimalValue(token.getState(bar.getName())).doubleValue()
-                    * 100));
-      }
     }
-    // Ownership
-    // If the token is owned by all and we are a player don't alter the ownership
-    // list.
+
+    /* BARS */
+    var barsPanel = getBarsPanel();
+    for (var barContainer : barsPanel.getComponents()) {
+      var barComponents = ((Container) barContainer).getComponents();
+
+      JSlider bar = (JSlider) barComponents[1];
+      JCheckBox cb = (JCheckBox) barComponents[2];
+
+      BigDecimal value =
+          cb.isSelected() ? null : new BigDecimal(bar.getValue()).divide(new BigDecimal(100));
+      token.setState(bar.getName(), value);
+      bar.setValue(
+          (int)
+              (TokenBarFunction.getBigDecimalValue(token.getState(bar.getName())).doubleValue()
+                  * 100));
+    }
+    /* OWNERSHIP */
+    /* If the token is owned by all and we are a player don't alter the ownership list. */
     if (MapTool.getPlayer().isGM() || !token.isOwnedByAll()) {
       token.clearAllOwners();
 
@@ -762,59 +895,72 @@ public class EditTokenDialog extends AbeillePanel<Token> {
           token.addOwner((String) selectable.getObject());
         }
       }
-      // If we are not a GM and the only non GM owner make sure we can't
-      // take our selves off of the owners list
+      /* If we are not a GM and we are the only non-GM owner, make sure we cannot remove ourself from the owners list */
       if (!MapTool.getPlayer().isGM()) {
-        boolean hasPlayer = false;
-        Set<String> owners = token.getOwners();
-        if (owners != null) {
-          for (Player pl : MapTool.getPlayerList()) {
-            if (!pl.isGM() && owners.contains(pl.getName())) {
-              hasPlayer = true;
-            }
-          }
-        }
+        boolean hasPlayer = token.isOwnedByAny(MapTool.getNonGMs());
         if (!hasPlayer) {
           token.addOwner(MapTool.getPlayer().getName());
         }
       }
     }
-    // SHAPE
+    /* SHAPE */
     token.setShape((Token.TokenShape) getShapeCombo().getSelectedItem());
 
-    // Macros
+    /* Stat Sheet */
+    var ss = (StatSheet) getStatSheetCombo().getSelectedItem();
+    if (ss == null || (ss.name() == null && ss.namespace() == null)) {
+      token.useDefaultStatSheet();
+    } else {
+      var ssManager = new StatSheetManager();
+      var location = (StatSheetLocation) getStatSheetLocationCombo().getSelectedItem();
+      if (location == null) {
+        location = StatSheetLocation.BOTTOM_LEFT;
+      }
+      token.setStatSheet(new StatSheetProperties(ssManager.getId(ss), location));
+    }
+
+    /* Macros */
     token.setSpeechMap(((KeyValueTableModel) getSpeechTable().getModel()).getMap());
 
-    // Properties
-    ((TokenPropertyTableModel) getPropertyTable().getModel()).applyTo(token);
+    /* Properties */
+    var tableModel = getPropertyTable().getModel();
+    if (getPropertyTable().getModel() instanceof TokenPropertyTableModel tokenPropertyTableModel) {
+      tokenPropertyTableModel.applyTo(token);
+    } else {
+      log.warn(
+          "Property table model is not of the expected type; expected {} but got {}",
+          TokenPropertyTableModel.class,
+          tableModel.getClass());
+    }
 
-    // Charsheet
+    /* Charsheet */
     if (getCharSheetPanel().getImageId() != null) {
       MapToolUtil.uploadAsset(AssetManager.getAsset(getCharSheetPanel().getImageId()));
     }
     token.setCharsheetImage(getCharSheetPanel().getImageId());
 
-    // IMAGE
+    /* IMAGE */
     if (!token.getImageAssetId().equals(getTokenIconPanel().getImageId())) {
       MapToolUtil.uploadAsset(AssetManager.getAsset(getTokenIconPanel().getImageId()));
       token.setImageAsset(null, getTokenIconPanel().getImageId()); // Default image for now
     }
-    // PORTRAIT
+    /* PORTRAIT */
     if (getPortraitPanel().getImageId() != null) {
-      // Make sure the server has the image
+      /* Make sure the server has the image */
       if (!MapTool.getCampaign().containsAsset(getPortraitPanel().getImageId())) {
         MapTool.serverCommand().putAsset(AssetManager.getAsset(getPortraitPanel().getImageId()));
       }
     }
     token.setPortraitImage(getPortraitPanel().getImageId());
 
-    // LAYOUT
-    token.setSizeScale(getTokenLayoutPanel().getSizeScale());
-    token.setAnchor(getTokenLayoutPanel().getAnchorX(), getTokenLayoutPanel().getAnchorY());
+    /* LAYOUT */
+    getTokenLayoutPanel().getHelper().commitChanges(token);
 
-    // TOPOLOGY
+    token.setSnapToGrid(getSnapToGrid().isSelected());
+
+    /* TOPOLOGY */
     for (final var type : Zone.TopologyType.values()) {
-      token.setTopology(type, getTokenTopologyPanel().getTopology(type));
+      token.setMaskTopology(type, getTokenTopologyPanel().getTopology(type));
     }
     token.setIsAlwaysVisible(getAlwaysVisibleButton().isSelected());
     token.setAlwaysVisibleTolerance((int) getVisibilityToleranceSpinner().getValue());
@@ -826,40 +972,20 @@ public class EditTokenDialog extends AbeillePanel<Token> {
 
     token.setHeroLabData(heroLabData);
 
-    // URI Access
+    /* URI Access */
     token.setAllowURIAccess(getAllowURLAccess().isEnabled() && getAllowURLAccess().isSelected());
-    // OTHER
+    /* OTHER */
     tokenSaved = true;
 
-    // Character Sheet
-    // Map<String, Object> properties = controller.getData();
-    // for (String prop : token.getPropertyNames())
-    // token.setProperty(prop, properties.get(prop));
-
-    // Update UI
+    /* Update UI */
     MapTool.getFrame().updateTokenTree();
     MapTool.getFrame().resetTokenPanels();
 
-    // Jamz: TODO check if topology changed on token first
-    MapTool.getFrame().getCurrentZoneRenderer().getZone().tokenTopologyChanged();
+    MapTool.getFrame()
+        .getCurrentZoneRenderer()
+        .getZone()
+        .tokenMaskTopologyChanged(token.getMaskTopologyTypes());
     return true;
-  }
-
-  public JButton getOKButton() {
-    return (JButton) getComponent("okButton");
-  }
-
-  public void initCancelButton() {
-    getCancelButton()
-        .addActionListener(
-            e -> {
-              unbind();
-              dialog.closeDialog();
-            });
-  }
-
-  public JButton getCancelButton() {
-    return (JButton) getComponent("cancelButton");
   }
 
   public PropertyTable getPropertyTable() {
@@ -867,90 +993,101 @@ public class EditTokenDialog extends AbeillePanel<Token> {
   }
 
   private void updateStatesPanel() {
-    // Group the states first into individual panels
+    JPanel statesPanel = getStatesPanel();
+    statesPanel.setLayout(new MigLayout("wrap", "[fill,grow]"));
+    statesPanel.removeAll();
+    /* Group the states first into individual panels */
     List<BooleanTokenOverlay> overlays =
         new ArrayList<BooleanTokenOverlay>(MapTool.getCampaign().getTokenStatesMap().values());
-    Map<String, JPanel> groups = new TreeMap<String, JPanel>();
-    var noGroupPanel =
-        new JPanel(new MigLayout("wrap 4", "[fill,grow][fill,grow][fill,grow][fill,grow]"));
-    noGroupPanel.setName("no group");
-    groups.put("", noGroupPanel);
-    for (BooleanTokenOverlay overlay : overlays) {
-      String group = overlay.getGroup();
-      if (group != null && (group = group.trim()).length() != 0) {
-        JPanel panel = groups.get(group);
-        if (panel == null) {
-          panel =
-              new JPanel(new MigLayout("wrap 4", "[fill,grow][fill,grow][fill,grow][fill,grow]"));
-          panel.setName(group);
-          panel.setBorder(BorderFactory.createTitledBorder(group));
-          groups.put(group, panel);
+    if (overlays.isEmpty()) {
+      statesPanel.setVisible(false);
+    } else {
+      statesPanel.setVisible(true);
+      Map<String, JPanel> groups = new TreeMap<String, JPanel>();
+      var noGroupPanel =
+          new JPanel(new MigLayout("wrap 4", "[fill,grow][fill,grow][fill,grow][fill,grow]"));
+      noGroupPanel.setName("no group");
+      groups.put("", noGroupPanel);
+      for (BooleanTokenOverlay overlay : overlays) {
+        String group = overlay.getGroup();
+        if (group != null && !(group = group.trim()).isEmpty()) {
+          JPanel panel = groups.get(group);
+          if (panel == null) {
+            panel =
+                new JPanel(new MigLayout("wrap 4", "[fill,grow][fill,grow][fill,grow][fill,grow]"));
+            panel.setName(group);
+            panel.setBorder(BorderFactory.createTitledBorder(group));
+            groups.put(group, panel);
+          }
         }
       }
-    }
 
-    // Add the group panels and bar panel to the states panel
-    JPanel statesPanel = getStatesPanel();
-    MigLayout layout = new MigLayout("wrap", "[fill,grow]");
-    statesPanel.setLayout(layout);
-    statesPanel.removeAll();
-
-    // Add the individual check boxes.
-    for (BooleanTokenOverlay state : overlays) {
-      String group = state.getGroup();
-      var panel = groups.get("");
-      if (group != null && (group = group.trim()).length() != 0) {
-        panel = groups.get(group);
+      /* Add the individual check boxes. */
+      for (BooleanTokenOverlay state : overlays) {
+        String group = state.getGroup();
+        var panel = groups.get("");
+        if (group != null && !(group = group.trim()).isEmpty()) {
+          panel = groups.get(group);
+        }
+        panel.add(new JCheckBox(state.getName()));
       }
-      panel.add(new JCheckBox(state.getName()));
+
+      /* Add the group panels to the states panel */
+      for (JPanel gPanel : groups.values()) {
+        if (gPanel.getComponentCount() == 0) continue;
+
+        statesPanel.add(gPanel);
+      }
     }
 
-    for (JPanel gPanel : groups.values()) {
-      if (gPanel.getComponentCount() == 0) continue;
-
-      statesPanel.add(gPanel);
-    }
-
-    JPanel barPanel = new JPanel(new MigLayout("wrap 2", "[fill,grow][fill,grow]"));
-    barPanel.setName("bar");
-    // Add sliders to the bar panel
-    if (MapTool.getCampaign().getTokenBarsMap().size() > 0) {
-      barPanel.setBorder(
-          BorderFactory.createTitledBorder(I18N.getText("CampaignPropertiesDialog.tab.bars")));
-
+    /* Add sliders to the bar panel */
+    var barsPanel = getBarsPanel();
+    barsPanel.setLayout(new MigLayout("wrap 2,gapx 5%", "[fill,grow][fill,grow]"));
+    barsPanel.removeAll();
+    if (MapTool.getCampaign().getTokenBarsMap().isEmpty()) {
+      barsPanel.setVisible(false);
+    } else {
+      barsPanel.setVisible(true);
       for (BarTokenOverlay bar : MapTool.getCampaign().getTokenBarsMap().values()) {
         JSlider slider = new JSlider(0, 100);
         JCheckBox hide = new JCheckBox(I18N.getString("EditTokenDialog.checkbox.state.hide"));
-        hide.putClientProperty("JSlider", slider);
         hide.addChangeListener(
             e -> {
-              JSlider js = (JSlider) ((JCheckBox) e.getSource()).getClientProperty("JSlider");
-              js.setEnabled(!((JCheckBox) e.getSource()).isSelected());
+              slider.setEnabled(!((JCheckBox) e.getSource()).isSelected());
             });
         slider.setName(bar.getName());
         slider.setPaintLabels(true);
         slider.setPaintTicks(true);
-        slider.setMajorTickSpacing(20);
-        slider.createStandardLabels(20);
-        slider.setMajorTickSpacing(10);
+        slider.setMajorTickSpacing(25);
+        slider.setLabelTable(slider.createStandardLabels(50));
+        slider.setMinorTickSpacing(5);
 
-        JPanel tokenbarPanel = new JPanel(new MigLayout("wrap 2", "[fill,grow][fill,grow]"));
+        // Sliders by default have a fixed preferred size. Overriding it to zero will instead let
+        // MigLayout grow the slider to fill the space.
+        slider.setPreferredSize(new Dimension(0, 0));
+
+        JPanel tokenbarPanel = new JPanel(new MigLayout("wrap 2", "[fill][fill,grow]"));
         tokenbarPanel.add(new JLabel(bar.getName() + ":"));
         tokenbarPanel.add(slider, "span 1 2 align right");
         tokenbarPanel.add(hide);
-        barPanel.add(tokenbarPanel);
+        barsPanel.add(tokenbarPanel);
       }
-      statesPanel.add(barPanel);
     }
   }
 
-  /** @return Getter for tokenSaved */
+  /**
+   * @return Getter for tokenSaved
+   */
   public boolean isTokenSaved() {
     return tokenSaved;
   }
 
   public JPanel getStatesPanel() {
     return (JPanel) getComponent("statesPanel");
+  }
+
+  public JPanel getBarsPanel() {
+    return (JPanel) getComponent("barsPanel");
   }
 
   public JTable getSpeechTable() {
@@ -1003,6 +1140,10 @@ public class EditTokenDialog extends AbeillePanel<Token> {
 
   public JToggleButton getPitVblToggle() {
     return (JToggleButton) getComponent("pitVblToggle");
+  }
+
+  public JToggleButton getCoverVblToggle() {
+    return (JToggleButton) getComponent("coverVblToggle");
   }
 
   public JToggleButton getMblToggle() {
@@ -1069,8 +1210,28 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     return (JSpinner) getComponent("visibilityToleranceSpinner");
   }
 
+  public JPanel getLibTokenProperties() {
+    return (JPanel) getComponent("panel.libToken");
+  }
+
   public JCheckBox getAllowURLAccess() {
     return (JCheckBox) getComponent("@allowURIAccess");
+  }
+
+  public JCheckBox getSnapToGrid() {
+    return getCheckBox("@isSnapToGrid");
+  }
+
+  public JCheckBox getFlippedIso() {
+    return getCheckBox("@isFlippedIso");
+  }
+
+  public JCheckBox getFlippedX() {
+    return getCheckBox("@isFlippedX");
+  }
+
+  public JCheckBox getFlippedY() {
+    return getCheckBox("@isFlippedY");
   }
 
   public void initSpeechPanel() {
@@ -1105,11 +1266,10 @@ public class EditTokenDialog extends AbeillePanel<Token> {
             return text != null && text.length() > 100 ? text.substring(0, 100) + " ..." : text;
           }
         };
-    propertyTable.setFillsViewportHeight(true); // XXX This is Java6-only -- need
-    //  Java5 solution
+    propertyTable.setFillsViewportHeight(true);
     propertyTable.setName("propertiesTable");
 
-    // wrap button and functionality
+    /* wrap button and functionality */
     JPanel buttonsAndPropertyTable = new JPanel();
     buttonsAndPropertyTable.setLayout(new BorderLayout());
     JCheckBox wrapToggle = new JCheckBox(I18N.getString("EditTokenDialog.msg.wrap"));
@@ -1121,17 +1281,14 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     buttonsAndPropertyTable.add(wrapToggle, BorderLayout.PAGE_END);
 
     PropertyPane pane = new PropertyPane(propertyTable);
-    // pane.setPreferredSize(new Dimension(100, 300));
     buttonsAndPropertyTable.add(pane, BorderLayout.CENTER);
     replaceComponent("propertiesPanel", "propertiesTable", buttonsAndPropertyTable);
   }
 
-  public void initTokenDetails() {
-    // tokenGMNameLabel = panel.getLabel("tokenGMNameLabel");
-  }
-
   public void initTokenLayoutPanel() {
-    TokenLayoutPanel layoutPanel = new TokenLayoutPanel();
+    TokenLayoutRenderPanel layoutPanel = new TokenLayoutRenderPanel();
+    new TokenLayoutPanelHelper(this, layoutPanel, dialogFactory.getDialog().getOKButton());
+    layoutPanel.setMinimumSize(new Dimension(150, 125));
     layoutPanel.setPreferredSize(new Dimension(150, 125));
     layoutPanel.setName("tokenLayout");
 
@@ -1140,6 +1297,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
 
   public void initCharsheetPanel() {
     ImageAssetPanel panel = new ImageAssetPanel();
+    panel.setMinimumSize(new Dimension(150, 125));
     panel.setPreferredSize(new Dimension(150, 125));
     panel.setName("charsheet");
     panel.setLayout(new GridLayout());
@@ -1149,6 +1307,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
 
   public void initPortraitPanel() {
     ImageAssetPanel panel = new ImageAssetPanel();
+    panel.setMinimumSize(new Dimension(150, 125));
     panel.setPreferredSize(new Dimension(150, 125));
     panel.setName("portrait");
     panel.setLayout(new GridLayout());
@@ -1164,8 +1323,8 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     return (ImageAssetPanel) getComponent("charsheet");
   }
 
-  public TokenLayoutPanel getTokenLayoutPanel() {
-    return (TokenLayoutPanel) getComponent("tokenLayout");
+  public TokenLayoutRenderPanel getTokenLayoutPanel() {
+    return (TokenLayoutRenderPanel) getComponent("tokenLayout");
   }
 
   public TokenTopologyPanel getTokenTopologyPanel() {
@@ -1208,6 +1367,13 @@ public class EditTokenDialog extends AbeillePanel<Token> {
                 getTokenTopologyPanel()
                     .setTopologyTypeSelected(
                         Zone.TopologyType.PIT_VBL, ((AbstractButton) e.getSource()).isSelected()));
+    getCoverVblToggle()
+        .addActionListener(
+            e ->
+                getTokenTopologyPanel()
+                    .setTopologyTypeSelected(
+                        Zone.TopologyType.COVER_VBL,
+                        ((AbstractButton) e.getSource()).isSelected()));
     getMblToggle()
         .addActionListener(
             e ->
@@ -1255,11 +1421,16 @@ public class EditTokenDialog extends AbeillePanel<Token> {
                 for (final var type : Zone.TopologyType.values()) {
                   final var topology = getTokenTopologyPanel().getTopology(type);
                   if (topology != null) {
-                    TokenVBL.renderTopology(
-                        MapTool.getFrame().getCurrentZoneRenderer(),
-                        getTokenTopologyPanel().getToken().getTransformedTopology(topology),
-                        false,
-                        type);
+                    MapTool.serverCommand()
+                        .updateMaskTopology(
+                            MapTool.getFrame().getCurrentZoneRenderer().getZone(),
+                            getTokenTopologyPanel()
+                                .getToken()
+                                .getTransformedMaskTopology(
+                                    MapTool.getFrame().getCurrentZoneRenderer().getZone(),
+                                    topology),
+                            false,
+                            type);
                   }
                 }
 
@@ -1273,24 +1444,18 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     getTransferTopologyFromMap()
         .addActionListener(
             e -> {
+              var zone = MapTool.getFrame().getCurrentZoneRenderer().getZone();
+              var token = getTokenTopologyPanel().getToken();
               final boolean removeFromMap = getCopyOrMoveCheckbox().isSelected();
               for (final var type : getTokenTopologyPanel().getSelectedTopologyTypes()) {
-                Area mapTopology =
-                    TokenVBL.getMapTopology_transformed(
-                        MapTool.getFrame().getCurrentZoneRenderer(),
-                        getTokenTopologyPanel().getToken(),
-                        type);
+                Area mapTopology = TokenVBL.getTopology_underToken(zone, token, type);
+                Area newTokenTopology =
+                    TokenVBL.transformTopology_toToken(zone, token, mapTopology);
 
-                getTokenTopologyPanel().putCustomTopology(type, mapTopology);
+                getTokenTopologyPanel().putCustomTopology(type, newTokenTopology);
 
                 if (removeFromMap) {
-                  Area topologyToDelete =
-                      TokenVBL.getTopology_underToken(
-                          MapTool.getFrame().getCurrentZoneRenderer(),
-                          getTokenTopologyPanel().getToken(),
-                          type);
-                  TokenVBL.renderTopology(
-                      MapTool.getFrame().getCurrentZoneRenderer(), topologyToDelete, true, type);
+                  MapTool.serverCommand().updateMaskTopology(zone, mapTopology, true, type);
                 }
               }
 
@@ -1383,7 +1548,9 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     getVisibilityToleranceSpinner().setModel(new SpinnerNumberModel(2, 1, 9, 1));
   }
 
-  /** @param regenerate Only regenerate topology from token image when needed */
+  /**
+   * @param regenerate Only regenerate topology from token image when needed
+   */
   protected void updateAutoGeneratedTopology(boolean regenerate) {
     if (getTokenTopologyPanel().getAutoGenerated()) {
       getTokenTopologyPanel().setInProgress(true);
@@ -1400,10 +1567,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
   /*
    * Initialize the Hero Lab Images tab
    */
-  @SuppressWarnings("unchecked")
   public void initHeroLabImageList() {
-    getHeroLabImagesList().setCellRenderer(new HeroLabImageListRenderer());
-
     JButton setTokenImage = (JButton) getComponent("setAsImageButton");
     setTokenImage.addActionListener(
         e -> {
@@ -1411,7 +1575,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
 
           if (heroLabData != null) {
             getTokenIconPanel().setImageId(heroLabData.getImageAssetID(index));
-            getTokenLayoutPanel().setTokenImage(heroLabData.getImageAssetID(index));
+            getTokenLayoutPanel().getHelper().setTokenImageId(heroLabData.getImageAssetID(index));
           }
         });
 
@@ -1454,34 +1618,34 @@ public class EditTokenDialog extends AbeillePanel<Token> {
    * Initialize the Hero Lab statblock tabs
    */
   public void initStatBlocks() {
-    // Setup the HTML panel
+    /* Setup the HTML panel */
     JEditorPane statblockPane = getHtmlStatblockEditor();
     HTMLEditorKit kit = new HTMLEditorKit();
     HTMLDocument statblockDoc = (HTMLDocument) kit.createDefaultDocument();
     statblockPane.setEditorKit(kit);
     statblockPane.setDocument(statblockDoc);
 
-    // We need this property as the kit can't handle <meta http-equiv="Content-Type"
-    // content="text/html; charset=XYZ> and the rendered html is blank
+    /* We need this property as the kit can't handle <meta http-equiv="Content-Type"
+    content="text/html; charset=XYZ> and the rendered html is blank */
     statblockDoc.putProperty("IgnoreCharsetDirective", true);
 
-    // Setup the XML panel
+    /* Setup the XML panel */
     xmlStatblockRSyntaxTextArea.setSyntaxEditingStyle(SyntaxConstants.SYNTAX_STYLE_XML);
     xmlStatblockRSyntaxTextArea.setEditable(false);
     xmlStatblockRSyntaxTextArea.setCodeFoldingEnabled(true);
     xmlStatblockRSyntaxTextArea.setLineWrap(true);
     xmlStatblockRSyntaxTextArea.setWrapStyleWord(true);
     xmlStatblockRSyntaxTextArea.setTabSize(2);
-    // Set the color style via Theme
+    /* Set the color style via Theme */
     try {
       File themeFile =
-          new File(AppConstants.THEMES_DIR, AppPreferences.getDefaultMacroEditorTheme() + ".xml");
+          new File(AppConstants.THEMES_DIR, AppPreferences.defaultMacroEditorTheme.get() + ".xml");
       Theme theme = Theme.load(new FileInputStream(themeFile));
       theme.apply(xmlStatblockRSyntaxTextArea);
 
       xmlStatblockRSyntaxTextArea.revalidate();
     } catch (IOException e) {
-      e.printStackTrace();
+      log.error("Error while loading XML syntax theme", e);
     }
 
     RTextScrollPane xmlStatblockRTextScrollPane = new RTextScrollPane(xmlStatblockRSyntaxTextArea);
@@ -1489,21 +1653,22 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     replaceComponent(
         "xmlStatblockPanel", "xmlStatblockRTextScrollPane", xmlStatblockRTextScrollPane);
 
-    // Setup the TEXT panel
+    /* Setup the TEXT panel */
+    textStatblockRSyntaxTextArea.setUseFocusableTips(false);
     textStatblockRSyntaxTextArea.setEditable(false);
     textStatblockRSyntaxTextArea.setLineWrap(true);
     textStatblockRSyntaxTextArea.setWrapStyleWord(true);
     textStatblockRSyntaxTextArea.setTabSize(2);
-    // Set the color style via Theme
+    /* Set the color style via Theme */
     try {
       File themeFile =
-          new File(AppConstants.THEMES_DIR, AppPreferences.getDefaultMacroEditorTheme() + ".xml");
+          new File(AppConstants.THEMES_DIR, AppPreferences.defaultMacroEditorTheme.get() + ".xml");
       Theme theme = Theme.load(new FileInputStream(themeFile));
       theme.apply(textStatblockRSyntaxTextArea);
 
       textStatblockRSyntaxTextArea.revalidate();
     } catch (IOException e) {
-      e.printStackTrace();
+      log.error("Error while loading test syntax theme", e);
     }
 
     RTextScrollPane textStatblockRTextScrollPane =
@@ -1512,7 +1677,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     replaceComponent(
         "textStatblockPanel", "textStatblockRTextScrollPane", textStatblockRTextScrollPane);
 
-    // Setup the refresh button, #refreshes the HeroLabData from the portfolio
+    /* Setup the refresh button, #refreshes the HeroLabData from the portfolio */
     JButton refreshDataButton = (JButton) getComponent("refreshDataButton");
     refreshDataButton.addActionListener(
         e -> {
@@ -1540,11 +1705,11 @@ public class EditTokenDialog extends AbeillePanel<Token> {
               textStatblockRSyntaxTextArea.setText(heroLabData.getStatBlock_text());
               textStatblockRSyntaxTextArea.setCaretPosition(0);
 
-              // Update the images
+              /* Update the images */
               MD5Key tokenImageKey = heroLabData.getTokenImage();
               if (tokenImageKey != null) {
                 getTokenIconPanel().setImageId(tokenImageKey);
-                getTokenLayoutPanel().setTokenImage(tokenImageKey);
+                getTokenLayoutPanel().getHelper().setTokenImageId(tokenImageKey);
               }
 
               MD5Key portraitAssetKeY = heroLabData.getPortraitImage();
@@ -1557,8 +1722,8 @@ public class EditTokenDialog extends AbeillePanel<Token> {
                 getCharSheetPanel().setImageId(handoutAssetKey);
               }
 
-              // If NPC, lets not overwrite the Name, it may be "Creature 229" or such, GM
-              // name is enough
+              /* If NPC, lets not overwrite the Name, it may be "Creature 229" or such, GM
+              name is enough */
               ((JTextField) getComponent("@GMName")).setText(heroLabData.getName());
               if (heroLabData.isAlly()) {
                 getTypeCombo().setSelectedItem(Type.PC);
@@ -1567,13 +1732,13 @@ public class EditTokenDialog extends AbeillePanel<Token> {
                 getTypeCombo().setSelectedItem(Type.NPC);
               }
 
-              // Update image list
+              /* Update image list */
               loadHeroLabImageList();
             }
           }
         });
 
-    // Setup xPath searching for XML StatBlock
+    /* Setup xPath searching for XML StatBlock */
     JTextField xmlStatblockSearchTextField =
         (JTextField) getComponent("xmlStatblockSearchTextField");
     JButton xmlStatblockSearchButton = (JButton) getComponent("xmlStatblockSearchButton");
@@ -1607,7 +1772,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
           xmlStatblockRSyntaxTextArea.setCaretPosition(0);
         });
 
-    // Setup regular expression searching for TEXT StatBlock
+    /* Setup regular expression searching for TEXT StatBlock */
     JTextField textStatblockSearchTextField =
         (JTextField) getComponent("textStatblockSearchTextField");
     JButton textStatblockSearchButton = (JButton) getComponent("textStatblockSearchButton");
@@ -1634,9 +1799,6 @@ public class EditTokenDialog extends AbeillePanel<Token> {
           SearchContext context = new SearchContext();
           context.setSearchFor(searchText);
           context.setRegularExpression(true);
-          // context.setMatchCase(matchCaseCB.isSelected());
-          // context.setSearchForward(forward);
-          // context.setWholeWord(false);
 
           SearchEngine.find(textStatblockRSyntaxTextArea, context).wasFound();
         });
@@ -1754,7 +1916,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       Map<String, String> map = new HashMap<String, String>();
 
       for (Association<String, String> row : rowList) {
-        if (row.getLeft() == null || row.getLeft().trim().length() == 0) {
+        if (row.getLeft() == null || row.getLeft().trim().isEmpty()) {
           continue;
         }
         map.put(row.getLeft(), row.getRight());
@@ -1763,7 +1925,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     }
   }
 
-  // needed to change the popup for properties
+  /* needed to change the popup for properties */
   private static class MTMultilineStringExComboBox extends MultilineStringExComboBox {
 
     final ResourceBundle a = ResourceBundle.getBundle("com.jidesoft.combobox.combobox");
@@ -1780,7 +1942,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     }
   }
 
-  // the cell editor for property popups
+  /* the cell editor for property popups */
   private static class MTMultilineStringCellEditor extends MultilineStringCellEditor {
 
     protected MTMultilineStringExComboBox createMultilineStringComboBox() {
@@ -1792,7 +1954,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     }
   }
 
-  // the property popup table
+  /* the property popup table */
   private static class MTMultilineStringPopupPanel extends PopupPanel {
 
     private RSyntaxTextArea j = createTextArea();
@@ -1803,19 +1965,20 @@ public class EditTokenDialog extends AbeillePanel<Token> {
 
     public MTMultilineStringPopupPanel(String paramString) {
       this.setResizable(true);
-      // Set the color style via Theme
+      /* Set the color style via Theme */
       try {
         File themeFile =
-            new File(AppConstants.THEMES_DIR, AppPreferences.getDefaultMacroEditorTheme() + ".xml");
+            new File(
+                AppConstants.THEMES_DIR, AppPreferences.defaultMacroEditorTheme.get() + ".xml");
         Theme theme = Theme.load(new FileInputStream(themeFile));
         theme.apply(j);
 
         j.revalidate();
       } catch (IOException e) {
-        e.printStackTrace();
+        log.error("Error while loading multiline property editor theme", e);
       }
       JScrollPane localJScrollPane = new RTextScrollPane(j);
-      localJScrollPane.setVerticalScrollBarPolicy(22);
+      localJScrollPane.setVerticalScrollBarPolicy(JScrollPane.VERTICAL_SCROLLBAR_ALWAYS);
       localJScrollPane.setAutoscrolls(true);
       localJScrollPane.setPreferredSize(new Dimension(300, 200));
       setBorder(BorderFactory.createEmptyBorder(10, 5, 5, 5));
@@ -1837,7 +2000,6 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       syntaxComboBox.addActionListener(
           e -> j.setSyntaxEditingStyle(syntaxComboBox.getSelectedItem().toString()));
 
-      // content.add(wrapToggle);
       add(syntaxComboBox, BorderLayout.BEFORE_FIRST_LINE);
       add(wrapToggle, BorderLayout.AFTER_LAST_LINE);
     }
@@ -1856,6 +2018,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
 
     protected RSyntaxTextArea createTextArea() {
       RSyntaxTextArea textArea = new RSyntaxTextArea();
+      textArea.setUseFocusableTips(false);
       textArea.setAnimateBracketMatching(true);
       textArea.setBracketMatchingEnabled(true);
       textArea.setLineWrap(false);
@@ -1864,23 +2027,24 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     }
   }
 
-  // cell renderer for properties table
+  /* cell renderer for properties table */
   private static class WordWrapCellRenderer extends RSyntaxTextArea implements TableCellRenderer {
 
     WordWrapCellRenderer() {
       setLineWrap(false);
       setWrapStyleWord(true);
 
-      // Set the color style via Theme
+      /* Set the color style via Theme */
       try {
         File themeFile =
-            new File(AppConstants.THEMES_DIR, AppPreferences.getDefaultMacroEditorTheme() + ".xml");
+            new File(
+                AppConstants.THEMES_DIR, AppPreferences.defaultMacroEditorTheme.get() + ".xml");
         Theme theme = Theme.load(new FileInputStream(themeFile));
         theme.apply(this);
 
         revalidate();
       } catch (IOException e) {
-        e.printStackTrace();
+        log.error("Error while loading theme", e);
       }
     }
 
@@ -1919,14 +2083,14 @@ public class EditTokenDialog extends AbeillePanel<Token> {
         publish(generatedTopology);
       }
 
-      // Nothing to do, so nothing to publish.
+      /* Nothing to do, so nothing to publish. */
       return null;
     }
 
     @Override
     protected void process(List<Area> areaChunk) {
       if (!isCancelled()) {
-        final var newArea = areaChunk.get(areaChunk.size() - 1);
+        final var newArea = areaChunk.getLast();
         final var optimizedArea =
             TokenVBL.simplifyArea(
                 newArea,
@@ -1945,7 +2109,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     }
   }
 
-  class SliderListener implements ChangeListener {
+  private class OpacitySliderListener implements ChangeListener {
 
     public void stateChanged(ChangeEvent e) {
       JSlider source = (JSlider) e.getSource();
@@ -1959,10 +2123,13 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     }
   }
 
-  public class HeroLabImageListRenderer extends DefaultListCellRenderer {
+  private static class HeroLabImageListRenderer extends DefaultListCellRenderer {
+    private final Font font = new Font("helvitica", Font.BOLD, 24);
+    private final HeroLabData heroLabData;
 
-    private static final long serialVersionUID = 7113815213979044509L;
-    Font font = new Font("helvitica", Font.BOLD, 24);
+    public HeroLabImageListRenderer(HeroLabData heroLabData) {
+      this.heroLabData = heroLabData;
+    }
 
     @Override
     public Component getListCellRendererComponent(
@@ -1971,13 +2138,13 @@ public class EditTokenDialog extends AbeillePanel<Token> {
           (JLabel) super.getListCellRendererComponent(list, value, index, isSelected, cellHasFocus);
       try {
         ImageIcon finalImage =
-            ImageUtil.scaleImage(
+            ImageUtil.scaleImageIcon(
                 new ImageIcon(ImageManager.getImageAndWait(heroLabData.getImageAssetID(index))),
                 250,
                 175);
         label.setIcon(finalImage);
       } catch (Exception e) {
-        e.printStackTrace();
+        log.error("Error while loading hero lab image", e);
       }
       label.setIconTextGap(10);
       label.setHorizontalTextPosition(JLabel.LEFT);
@@ -1986,96 +2153,47 @@ public class EditTokenDialog extends AbeillePanel<Token> {
     }
   }
 
-  // //
-  // HANDLER
-  public static class MouseHandler extends MouseAdapter {
-
-    HtmlEditorSplit source;
-
-    public MouseHandler(HtmlEditorSplit source) {
-      this.source = source;
-    }
-
-    @Override
-    public void mouseClicked(MouseEvent e) {
-      if (SwingUtilities.isRightMouseButton(e)) {
-        JPopupMenu menu = new JPopupMenu();
-        JMenuItem sendToChatItem =
-            new JMenuItem(I18N.getString("EditTokenDialog.menu.notes.sendChat"));
-        sendToChatItem.addActionListener(
-            e12 -> {
-              String selectedText = source.getSelectedText();
-              if (selectedText == null) {
-                selectedText = source.getText();
-              }
-              // TODO: Combine this with the code in MacroButton
-              JTextComponent commandArea =
-                  MapTool.getFrame().getCommandPanel().getCommandTextArea();
-
-              commandArea.setText(commandArea.getText() + selectedText);
-              commandArea.requestFocusInWindow();
-            });
-        menu.add(sendToChatItem);
-
-        JMenuItem sendAsEmoteItem =
-            new JMenuItem(I18N.getString("EditTokenDialog.menu.notes.sendEmit"));
-        sendAsEmoteItem.addActionListener(
-            e1 -> {
-              String selectedText = source.getSelectedText();
-              if (selectedText == null) {
-                selectedText = source.getText();
-              }
-              // TODO: Combine this with the code in MacroButton
-              MapTool.getFrame().getCommandPanel().commitCommand("/emit " + selectedText);
-              MapTool.getFrame().getCommandPanel().getCommandTextArea().requestFocusInWindow();
-            });
-        menu.add(sendAsEmoteItem);
-        menu.show((JComponent) e.getSource(), e.getX(), e.getY());
-      }
-    }
-  }
-
-  // //
-  // MODELS
-  private class TokenPropertyTableModel
-      extends AbstractPropertyTableModel<EditTokenDialog.TokenPropertyTableModel.EditTokenProperty>
+  /* MODELS */
+  private static class TokenPropertyTableModel
+      extends PropertyTableModel<TokenPropertyTableModel.EditTokenProperty>
       implements NavigableModel {
+    private final List<TokenProperty> propertyList;
+    private final Map<String, String> propertyMap;
 
-    private static final long serialVersionUID = 2822797264738675580L;
-
-    private Map<String, String> propertyMap;
-    private List<TokenProperty> propertyList;
-
-    private Map<String, String> getPropertyMap() {
-      Token token = getModel();
-
-      if (propertyMap == null) {
-        propertyMap = new HashMap<String, String>();
-
-        List<TokenProperty> propertyList = getPropertyList();
-        for (TokenProperty property : propertyList) {
-          String value = (String) token.getProperty(property.getName());
-          if (value == null) {
-            value = property.getDefaultValue();
-          }
-          propertyMap.put(property.getName(), value);
-        }
-      }
-      return propertyMap;
+    public TokenPropertyTableModel() {
+      propertyList = List.of();
+      propertyMap = Map.of();
     }
 
-    private List<TokenProperty> getPropertyList() {
-      if (propertyList == null) {
-        propertyList =
-            MapTool.getCampaign()
-                .getTokenPropertyList((String) getPropertyTypeCombo().getSelectedItem());
+    public TokenPropertyTableModel(
+        @Nullable Token model,
+        String propertyType,
+        List<TokenProperty> propertyList,
+        TableCellRenderer propertyCellRenderer) {
+      this.propertyList = propertyList;
+
+      this.propertyMap = new HashMap<>();
+      for (TokenProperty property : propertyList) {
+        String value = model == null ? null : (String) model.getProperty(property.getName());
+        if (value == null) {
+          value = property.getDefaultValue();
+        }
+        this.propertyMap.put(property.getName(), value);
       }
-      return propertyList;
+
+      var gridProperties = new ArrayList<EditTokenProperty>();
+      for (var tokenProperty : propertyList) {
+        var gridProperty = new EditTokenProperty(tokenProperty.getName(), propertyType);
+        gridProperty.setTableCellRenderer(propertyCellRenderer);
+        gridProperty.setCellEditor(new MTMultilineStringCellEditor());
+        gridProperties.add(gridProperty);
+      }
+      setOriginalProperties(gridProperties);
     }
 
     public void applyTo(Token token) {
-      for (TokenProperty property : getPropertyList()) {
-        String value = getPropertyMap().get(property.getName());
+      for (TokenProperty property : propertyList) {
+        String value = propertyMap.get(property.getName());
         if (property.getDefaultValue() != null && property.getDefaultValue().equals(value)) {
           token.setProperty(property.getName(), null); // Clear original value
           continue;
@@ -2086,8 +2204,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
 
     @Override
     public boolean isNavigableAt(int rowIndex, int columnIndex) {
-      // make the property name column non-navigable so that tab takes you
-      // directly to the next property value cell.
+      /* make the property name column non-navigable so that tab takes you directly to the next property value cell. */
       return (columnIndex != 0);
     }
 
@@ -2096,53 +2213,36 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       return true;
     }
 
-    @Override
-    public EditTokenProperty getProperty(int index) {
-      return new EditTokenProperty(getPropertyList().get(index).getName());
-    }
-
-    @Override
-    public int getPropertyCount() {
-      return getPropertyList() != null ? getPropertyList().size() : 0;
-    }
-
     class EditTokenProperty extends Property {
-
-      private static final long serialVersionUID = 4129033551005743554L;
-      private final String key;
-
-      public EditTokenProperty(String key) {
-        super(key, key, String.class, (String) getPropertyTypeCombo().getSelectedItem());
-        this.setTableCellRenderer(propertyCellRenderer);
-        this.key = key;
-        setCellEditor(new MTMultilineStringCellEditor());
+      public EditTokenProperty(String key, String propertyType) {
+        super(key, key, String.class, propertyType);
       }
 
       @Override
       public Object getValue() {
-        return getPropertyMap().get(key);
+        return propertyMap.get(getName());
       }
 
       @Override
       public void setValue(Object value) {
-        getPropertyMap().put(key, (String) value);
+        propertyMap.put(getName(), (String) value);
       }
 
       @Override
       public boolean hasValue() {
-        return getPropertyMap().get(key) != null;
+        return propertyMap.get(getName()) != null;
       }
     }
   }
 
-  private class OwnerListModel extends AbstractListModel {
+  private static final class OwnerListModel extends AbstractListModel<Selectable> {
 
     private static final long serialVersionUID = 2375600545516097234L;
 
     List<Selectable> ownerList = new ArrayList<Selectable>();
 
-    public OwnerListModel() {
-      Set<String> ownerSet = getModel().getOwners();
+    public OwnerListModel(Token model) {
+      Set<String> ownerSet = model.getOwners();
       List<String> list = new ArrayList<String>(ownerSet);
 
       List<Player> playerList = MapTool.getPlayerList();
@@ -2162,7 +2262,7 @@ public class EditTokenDialog extends AbeillePanel<Token> {
       }
     }
 
-    public Object getElementAt(int index) {
+    public Selectable getElementAt(int index) {
       return ownerList.get(index);
     }
 
