@@ -14,15 +14,17 @@
  */
 package net.rptools.maptool.client.walker;
 
-import java.awt.geom.Area;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Set;
+import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 import net.rptools.maptool.client.ui.zone.RenderPathWorker;
 import net.rptools.maptool.model.CellPoint;
 import net.rptools.maptool.model.Path;
+import net.rptools.maptool.model.Token;
 import net.rptools.maptool.model.Token.TerrainModifierOperation;
 import net.rptools.maptool.model.Zone;
 
@@ -32,10 +34,8 @@ public abstract class AbstractZoneWalker implements ZoneWalker {
   protected final Zone zone;
   protected boolean restrictMovement = false;
   protected Set<TerrainModifierOperation> terrainModifiersIgnored;
-  protected Area tokenWallVbl;
-  protected Area tokenHillVbl;
-  protected Area tokenPitVbl;
-  protected Area tokenMbl;
+  // Can be null, e.g., for measurement tools.
+  protected @Nullable Token keyToken;
   protected RenderPathWorker renderPathWorker;
 
   public AbstractZoneWalker(Zone zone) {
@@ -72,40 +72,29 @@ public abstract class AbstractZoneWalker implements ZoneWalker {
     }
   }
 
-  public CellPoint replaceLastWaypoint(CellPoint point) {
-    return replaceLastWaypoint(
-        point, false, Collections.singleton(TerrainModifierOperation.NONE), null, null, null, null);
+  public void replaceLastWaypoint(CellPoint point) {
+    replaceLastWaypoint(point, false, Collections.singleton(TerrainModifierOperation.NONE), null);
   }
 
   @Override
-  public CellPoint replaceLastWaypoint(
+  public void replaceLastWaypoint(
       CellPoint point,
       boolean restrictMovement,
       Set<TerrainModifierOperation> terrainModifiersIgnored,
-      Area tokenWallVbl,
-      Area tokenHillVbl,
-      Area tokenPitVbl,
-      Area tokenMbl) {
+      @Nullable Token keyToken) {
 
     this.restrictMovement = restrictMovement;
     this.terrainModifiersIgnored = terrainModifiersIgnored;
-    this.tokenWallVbl = tokenWallVbl;
-    this.tokenHillVbl = tokenHillVbl;
-    this.tokenPitVbl = tokenPitVbl;
-    this.tokenMbl = tokenMbl;
+
+    this.keyToken = keyToken;
 
     if (partialPaths.isEmpty()) {
-      return null;
+      return;
     }
     PartialPath oldPartial = partialPaths.remove(partialPaths.size() - 1);
 
-    // short circuit exit if the point hasn't changed.
-    // if (oldPartial.end.equals(point))
-    // return null;
-
     partialPaths.add(
         new PartialPath(oldPartial.start, point, calculatePath(oldPartial.start, point)));
-    return oldPartial.end;
   }
 
   public Path<CellPoint> getPath(RenderPathWorker renderPathWorker) {
@@ -113,24 +102,19 @@ public abstract class AbstractZoneWalker implements ZoneWalker {
     return getPath();
   }
 
-  public Path<CellPoint> getPath() {
+  public @Nonnull Path<CellPoint> getPath() {
     Path<CellPoint> path = new Path<>();
 
     synchronized (partialPaths) {
       if (!partialPaths.isEmpty()) {
-        path.addPathCell(partialPaths.get(0).start);
+        path.appendWaypoint(partialPaths.getFirst().start);
+
         for (PartialPath partial : partialPaths) {
-          if (partial.path.size() > 1) {
-            // Remove duplicated cells (end of a path = start of next path)
-            path.addAllPathCells(partial.path.subList(1, partial.path.size()));
+          // First point is already in (end of a path = start of next path)
+          if (!partial.path.isEmpty()) {
+            path.appendPartialPath(partial.path.subList(1, partial.path.size()));
           }
         }
-      }
-    }
-
-    for (CellPoint cp : path.getCellPath()) {
-      if (isWaypoint(cp)) {
-        path.addWayPoint(cp);
       }
     }
 
@@ -197,7 +181,9 @@ public abstract class AbstractZoneWalker implements ZoneWalker {
     return true;
   }
 
-  /** @see java.lang.Object#toString() */
+  /**
+   * @see java.lang.Object#toString()
+   */
   @Override
   public String toString() {
     StringBuilder s = new StringBuilder("Path: ");
@@ -211,7 +197,6 @@ public abstract class AbstractZoneWalker implements ZoneWalker {
   protected abstract List<CellPoint> calculatePath(CellPoint start, CellPoint end);
 
   protected static class PartialPath {
-
     final CellPoint start;
     final CellPoint end;
     final List<CellPoint> path;
@@ -229,7 +214,9 @@ public abstract class AbstractZoneWalker implements ZoneWalker {
       }
     }
 
-    /** @see java.lang.Object#toString() */
+    /**
+     * @see java.lang.Object#toString()
+     */
     @Override
     public String toString() {
       StringBuilder s = new StringBuilder("PartialPath([");
